--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "aphrodite": "^0.5.0",
-    "react-addons-css-transition-group": "^15.3.0"
+    "react-addons-css-transition-group": "^15.3.0",
+    "react-youtube" : "^7.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
